<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference android:key="restUrl"
		android:defaultValue="@string/defaultUrl"
		android:title="@string/restUrl" 
		android:summary="@string/urlSummary" />
		
	<EditTextPreference android:key="usr"
		android:title="@string/username" 
		android:summary="@string/userSummary"
		android:defaultValue="@string/defaultUser" />
		
	<PreferenceScreen android:key="syncSettings"
         android:title="@string/syncFilters"
         android:summary="@string/syncSummary">
         <intent            
             android:targetPackage="com.imaginea.android.sugarcrm"
             android:targetClass="com.imaginea.android.sugarcrm.SyncConfigActivity" />
     </PreferenceScreen>
</PreferenceScreen>
