<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signInStep"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
            
    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />
    <EditText
        android:id="@+id/loginUsername"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dip"
        android:scrollHorizontally="true"
        android:capitalize="none"
        android:autoText="false"
        android:inputType="textEmailAddress" />
    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:singleLine="true"
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    <EditText
        android:id="@+id/loginPassword"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dip"
        android:scrollHorizontally="true"
        android:capitalize="none"
        android:autoText="false"
        android:password="true"
        android:inputType="textPassword" />
	<CheckBox
		android:id="@+id/loginRememberPwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:checked="false"
		android:text="@string/rememberPassword" />
	<TextView
	    android:id="@+id/loginStatusMsg"
	    android:textAppearance="?android:attr/textAppearanceSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dip" />
	<Button
           android:id="@+id/loginOk"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:minWidth="100dip"
           android:text="@string/signIn"
           android:onClick="handleLogin" 
           android:visibility="gone"/>
     
</LinearLayout>
